--- a/artsypastel-client/src/styles/global.css
+++ b/artsypastel-client/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Rampart+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rampart+One&display=swap');
 
 body{
     overflow-x: hidden;
