--- a/artsypastel-client/src/styles/responsive.css
+++ b/artsypastel-client/src/styles/responsive.css
@@ -15,3 +15,10 @@
         display: none; 
     }
 }
+
+@media (max-width:512px) {
+    .card-images{
+        width: 13rem;
+        height: 8rem;
+    }
+}
